Circle of influence in proportional editing not always visible #36499

Closed
opened 2013-08-18 09:18:35 +02:00 by John Wise · 4 comments

%%%--- Operating System: Windows 8 64bit, Graphics card: GTX 570 ---

- Blender version with error: 2.68a r59223, and version that worked: not sure ---


- Short description of error ---

Circle of influence in proportional editing not always visible.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Subdivide a simple cube 7 or 8 tmes, select a vertex with proportional editing enabled, on occasion if the "brush" (circle of influence) is small, I can't see the circle at all until I mousewheel it up in size. In any case a good portion of the circle cannot be seen as it is obscured within the mesh

%%%

%%%--- Operating System: Windows 8 64bit, Graphics card: GTX 570 --- - Blender version with error: 2.68a r59223, and version that worked: not sure --- - Short description of error --- Circle of influence in proportional editing not always visible. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Subdivide a simple cube 7 or 8 tmes, select a vertex with proportional editing enabled, on occasion if the "brush" (circle of influence) is small, I can't see the circle at all until I mousewheel it up in size. In any case a good portion of the circle cannot be seen as it is obscured within the mesh %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can reproduce this bug on 32bit linux. It seems the proportional edit circle is drawn taking its depth in the viewport into account, whereas it should always be drawn on top.%%%

%%%I can reproduce this bug on 32bit linux. It seems the proportional edit circle is drawn taking its depth in the viewport into account, whereas it should always be drawn on top.%%%

%%%Fix in svn revision 59360, thanks for the report. It always draws on top now.%%%

%%%Fix in svn revision 59360, thanks for the report. It always draws on top now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36499
No description provided.