Fix #36499: proportional edit circle was drawing behind objects in some cases, now it always draws in front to ensure the circle is visible.